Fix image stretch problems in parallax containers

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -94,7 +94,7 @@ footer.page-footer {
 
 .parallax img {
 	display: inherit;
-	max-width: 50%;
+	max-width: 200%;
 }
 
 #mlh-trust-badge {
